Update POM files to compile project on Java 10 version